--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<script src="app.js"></script>
 <body>
+    
+    <div class="container">
+        <h1>To-Do List</h1>
+        <div class="input-container">
+            <input type="text" id="taskInput" placeholder="Enter a new task">
+            <button id="addButton">Add Task</button>
+        </div>
+        <ul id="taskList"></ul>
+    </div>
 
+
+    <script src="app.js"></script>
 </body>
 </html>
